--- a/index.html
+++ b/index.html
@@ -1,23 +1,40 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title> Medication Reminder</title>
+        <title>Medication Reminder</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1> My Medication Reminder</h1>
+        <h1>My Medication Reminder</h1>
         <form id="MedicationForm">
-            <label for = "MedicationName">Medication name</label>
-            <input type="text" id="dosage" name="dosage"><br><br>
-            <label for="schedule">Schedule (e.g,9.00 AM, 5.00 PM daily):</label>
-            <input type="text" id="schedule" name="schedule"><br><br>
-            <label for="startDate">Start Date:</label>
-            <input type="date" id="startDate" name="startDate"><br><br>
-            <label for="endDate">End Date:</label>
-            <input type="date" id="endDate" name="endDate"><br><br>
-            <button type="submit">Add medication</button>
+            <label for="MedicationName">Medication Name</label>
+            <input type="text" id="MedicationName" name="MedicationName" required placeholder="Enter medication name"><br><br>
+
+            <label for="dosage">Dosage</label>
+            <select id="dosage" name="dosage" required>
+                <option value="" disabled selected>Select dosage</option>
+                <option value="mg">mg</option>
+                <option value="tablet">Tablet</option>
+                <option value="ml">ml</option>
+                <option value="other">Other (please specify)</option>
+            </select>
+            <input type="text" id="dosageOther" name="dosageOther" placeholder="Specify dosage" style="display:none;"><br><br>
+            
+
+            <label for="schedule">Schedule (e.g., 9.00 AM, 5.00 PM daily)</label>
+            <input type="text" id="schedule" name="schedule" required placeholder="e.g., 9.00 AM, 5.00 PM daily"><br><br>
+
+            <label for="startDate">Start Date</label>
+            <input type="date" id="startDate" name="startDate" required><br><br>
+
+            <label for="endDate">End Date</label>
+            <input type="date" id="endDate" name="endDate" required><br><br>
+
+            <button type="submit">Add Medication</button>
         </form>
         <ul id="medicationList"></ul>
         <script src="script.js"></script>
     </body>
 </html>
+
+
